cldsol/manifests/customer-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-core
  labels:
    app: customer-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-core
  template:
    metadata:
      labels:
        app: customer-core
    spec:
      containers:
        - env:
            - name: SPRING_BOOT_ADMIN_CLIENT_URL
              value: http://spring-boot-admin.cldsol.mirioeggmann.ch
          image: mirioeggmann/lakesidemutual-customer-core
          imagePullPolicy: Always
          name: customer-core
          ports:
            - containerPort: 8110
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: customer-core
spec:
  selector:
    app: customer-core
  ports:
    - name: "8110"
      port: 8110
      targetPort: 8110
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-core
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: "customer-core.cldsol.mirioeggmann.ch"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-core
                port:
                  number: 8110
