cldsol/manifests/customer-management-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-management-backend
  labels:
    app: customer-management-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-management-backend
  template:
    metadata:
      labels:
        app: customer-management-backend
    spec:
      containers:
        - env:
            - name: CUSTOMERCORE_BASEURL
              value: http://customer-core.cldsol.mirioeggmann.ch
            - name: SPRING_BOOT_ADMIN_CLIENT_URL
              value: http://spring-boot-admin.cldsol.mirioeggmann.ch
          image: mirioeggmann/lakesidemutual-customer-management-backend
          imagePullPolicy: Always
          name: customer-management-backend
          ports:
            - containerPort: 8100
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: customer-management-backend
spec:
  selector:
    app: customer-management-backend
  ports:
    - name: "8100"
      port: 8100
      targetPort: 8100
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-management-backend
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: "customer-management-backend.cldsol.mirioeggmann.ch"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-management-backend
                port:
                  number: 8100
