cldsol/manifests/customer-self-service-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-self-service-backend
  labels:
    app: customer-self-service-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-self-service-backend
  template:
    metadata:
      labels:
        app: customer-self-service-backend
    spec:
      containers:
        - env:
            - name: CUSTOMERCORE_BASEURL
              value: http://customer-core.cldsol.mirioeggmann.ch
            - name: POLICYMANAGEMENT_TCPBROKERBINDADDRESS
              value: tcp://policy-management-backend:61616
            - name: SPRING_BOOT_ADMIN_CLIENT_URL
              value: http://spring-boot-admin.cldsol.mirioeggmann.ch
          image: mirioeggmann/lakesidemutual-customer-self-service-backend
          imagePullPolicy: Always
          name: customer-self-service-backend
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: customer-self-service-backend
spec:
  selector:
    app: customer-self-service-backend
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-self-service-backend
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: "customer-self-service-backend.cldsol.mirioeggmann.ch"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-self-service-backend
                port:
                  number: 8080
